k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  selector:
    app: api-server
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP # INTERNAL ONLY
